# custom-py-example

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
examples/: scene_3d.py
python/my_app/: .gitignore  __init__.py
src/: lib.rs
