[package]
name = "my-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "_pybevy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pybevy = { version = "0.2", features = ["linux-display"] }
bevy = { version = "0.18.1", default-features = false }

[build-dependencies]
cargo_metadata = "0.19"
