[package]
name = "my-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "_pybevy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pybevy = { git = "https://github.com/pybevy/pybevy.git", branch = "main" }
bevy = { version = "0.18.1", default-features = false }

[build-dependencies]
pybevy-build = { git = "https://github.com/pybevy/pybevy.git", branch = "main" }
